LPD-92618 Add POST /portal-instances/import endpoint
